# HuffmanCoder

./: CMakeLists.txt
src/core/: Node.cpp  Node.h  PriorityQueue.cpp  PriorityQueue.h  app.cpp  app.h  main.cpp
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
